kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-nginx
spec:
  description: "Allow pods that require ingress to allow traffic from ingress-nginx, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/nginx: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            io.kubernetes.pod.namespace: ingress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
  ingress:
    # nginx
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    # esphome
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: esphome
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "6052"
              protocol: TCP
    # home-assistant
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: home-assistant
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
    # music-assistant
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: music-assistant
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "8095"
              protocol: TCP
    # zwave-js-ui
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: zwave-js-ui
            io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "8091"
              protocol: TCP
